--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -49,10 +49,10 @@ li {
   margin: 0 auto;
 }
 
-.headline-left {
+.headline-left,
+.headline-right {
   position: relative;
   display: inline-block;
-  padding-left: 103px;
   font-size: 22px;
   line-height: 1.45;
   letter-spacing: 7.33333px;
@@ -63,9 +63,32 @@ li {
     width: 80px;
     height: 1px;
     background-color: $white;
-    left: 0;
     top: 50%;
   }
+}
+
+.headline-left {
+  padding-left: 103px;
+  &::before {
+    left: 0;
+  }
+}
+
+.headline-right {
+  padding-right: 103px;
+  &::before {
+    right: 0;
+  }
+}
+
+.surf,
+.holder {
+  padding: 160px 0 120px;
+}
+
+.holder {
+  padding-bottom: 265px;
+  margin-bottom: 35px;
 }
 
 .title {
@@ -105,6 +128,33 @@ li {
     span {
       font-weight: 100;
     }
+  }
+}
+
+.descr {
+  display: inline-block;
+  padding-left: 5px;
+  &__head {
+    font-weight: 800;
+    font-size: 40px;
+    span {
+      font-weight: 100;
+    }
+  }
+}
+
+.descr__head {
+  position: relative;
+  padding-right: 75px;
+  img {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  .descr__head-img {
+    position: absolute;
+    left: 210px;
+    top: -5px;
   }
 }
 
