--- a/app/scss/_travel.scss
+++ b/app/scss/_travel.scss
@@ -7,7 +7,11 @@
   background-repeat: no-repeat;
   .slider-arrows {
     top: 235px;
-    opacity: 0.5;
+    opacity: 0.25;
+    transition: all 0.3s;
+    &:hover {
+      opacity: 1;
+    }
   }
 }
 
