feat: adaptive header

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,5 +8,6 @@
 @import "sleep";
 @import "shop";
 @import "input-number";
-@import "media";
 @import "footer";
+@import "menu-btn";
+@import "media";
