feat: add readme

--- a/source/scss/blocks/media.scss
+++ b/source/scss/blocks/media.scss
@@ -355,7 +355,7 @@
     margin-bottom: 20px;
   }
 
-  .slider-dotshead {
+  .header .slider-dotshead {
     right: 0;
     bottom: 10px;
     width: 874px;
