--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -3,6 +3,11 @@
   height: 100vh;
 }
 
+.logo:focus-visible {
+  outline: none;
+  background-color: $green;
+}
+
 .header__aside {
   position: absolute;
   top: 0;
@@ -182,7 +187,31 @@
     letter-spacing: 3px;
     text-transform: capitalize;
     padding-top: 6px;
-    margin-bottom: 37px;
+  }
+}
+
+.menu__item {
+  width: 74px;
+  height: 100px;
+  margin: 0 auto;
+  &:last-child {
+    margin-bottom: 30px;
+  }
+}
+
+.menu__link {
+  width: 74px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 12px;
+  border-radius: 14px;
+  &:focus-visible {
+    outline: none;
+    box-shadow: 0px 0px 35px rgba($green, 0.837777);
+    background-color: rgba(#000000, 0.2);
   }
 }
 
