--- a/source/scss/global/global.scss
+++ b/source/scss/global/global.scss
@@ -7,6 +7,12 @@ body {
   min-width: 320px;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
 
 img {
