--- a/source/scss/blocks/travel.scss
+++ b/source/scss/blocks/travel.scss
@@ -1,7 +1,7 @@
 .holder {
-  background-image: url(../img/travel-bg.png);
+  background-image: url(../img/travel-bg.webp);
   &.sleep {
-    background-image: url(../img/frangipani.png);
+    background-image: url(../img/frangipani.webp);
   }
   background-position: bottom right;
   background-repeat: no-repeat;
