--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -87,7 +87,7 @@
   &-item {
     position: relative;
     height: 100vh;
-    background-image: url(../img/header-bg.jpg);
+    background-image: url(../img/header-bg.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
