--- a/source/scss/blocks/shop.scss
+++ b/source/scss/blocks/shop.scss
@@ -1,5 +1,5 @@
 .shop {
-  background-image: url(../img/shop-bg.png);
+  background-image: url(../img/shop-bg.webp);
   background-repeat: no-repeat;
   background-position: right center;
   .slider-arrows {
